name:                yesod-html-components
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KommuSoft/yesod-html-components#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu@gmail.com
copyright:           2019 Willem Van Onsem
category:            webdevelopment
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Yesod.Html.Components
    , Yesod.Html.Components.NProgress
  build-depends:
      base >= 4.7 && <5
    , aeson >=1.4.5.0 && <1.4.6
    , data-default >=0.7.1 && <0.7.2
    , shakespeare >=2.0 && <2.1
    , text >= 1.2 && <1.3
    , yesod >=1.6 && <1.7
    , yesod-core >=1.6 && <1.7
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KommuSoft/yesod-html-components
